--- a/violations.html
+++ b/violations.html
@@ -101,16 +101,16 @@
                 <form class ="gender-filter">
                   <input type="checkbox" class="form-check-input female">
                     <label class="radio-inline mr3">
-                      <i class="fas fa-female"></i>
+                      <i class="fas fa-female" data-toggle="tooltip" data-placement="auto" title="female"></i>
                     </label>
                   <input type="checkbox" class="form-check-input male">
                    <label class="radio-inline">
-                     <i class="fas fa-male"></i>
+                     <i class="fas fa-male" data-toggle="tooltip" data-placement="auto" title="male"></i>
                   </label>
                </form>
                <div class="dropdown mt3">
                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                   <i class="fas fa-plane"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
+                   <i class="fas fa-plane"  data-toggle="tooltip" data-placement="auto" title="How often do you travel by plane?"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
                      <li><a>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="dropdown mt3">
                   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                    <i class="fas fa-birthday-cake"></i><span class="textDropdown">&nbsp; Age</span>
+                    <i class="fas fa-birthday-cake" data-toggle="tooltip" data-placement="auto" title="How old are you?"></i><span class="textDropdown">&nbsp; Age</span>
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a>
@@ -146,7 +146,7 @@
                  </div>
                  <div class="dropdown mt3">
                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                     <i class="fas fa-dollar-sign"></i><span class="textDropdown">&nbsp; Income</span>
+                     <i class="fas fa-dollar-sign" data-toggle="tooltip" data-placement="auto" title="Yearly household income?"></i><span class="textDropdown">&nbsp; Income</span>
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
                        <li><a>
@@ -164,7 +164,7 @@
                   </div>
                   <div class="dropdown mt3">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                      <i class="fas fa-graduation-cap"></i><span class="textDropdown">&nbsp; Education</span>
+                      <i class="fas fa-graduation-cap" data-toggle="tooltip" data-placement="auto" title="Highest degree?"></i><span class="textDropdown">&nbsp; Education</span>
                       <span class="caret"></span></button>
                       <ul class="dropdown-menu">
                         <li><a>
@@ -181,7 +181,7 @@
                    </div>
                    <div class="dropdown mt3">
                      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                       <i class="fas fa-map-marker"></i><span class="textDropdown">&nbsp; Location</span>
+                       <i class="fas fa-map-marker" data-toggle="tooltip" data-placement="auto" title="Where are you from?"></i><span class="textDropdown">&nbsp; Location</span>
                        <span class="caret"></span></button>
                        <ul class="dropdown-menu">
                          <li><a>
@@ -203,7 +203,7 @@
                     </div>
                     <div class="dropdown mt3">
                       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        <i class="fas fa-couch"></i><span class ="textDropdown">&nbsp; Frequency of seat reclining</span>
+                        <i class="fas fa-couch" data-toggle="tooltip" data-placement="auto" title="Do you ever recline your seat when you fly?"></i><span class ="textDropdown">&nbsp; Frequency of seat reclining</span>
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                           <li><a>
@@ -223,13 +223,13 @@
                       <form class ="child-filter mt3">
                         <input type="checkbox" class="form-check-input child" name="optradio">
                           <label class="radio-inline">
-                            <i class="fas fa-child"></i>
+                            <i class="fas fa-child" data-toggle="tooltip" data-placement="auto" title="Do you have any childer under 18?"></i>
                           <!--  <p id="baby-explanation">Does the participant have children?</p>-->
                           </label>
                      </form>
                      <div class="slidecontainer mt2">
                        <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
-                       <p class="current-value mt2">Height: </p>
+                       <p class="current-value mt2" data-toggle="tooltip" data-placement="auto" title="How tall are you?">Height: </p>
                      </div>
                   </div>
                 </div>
@@ -261,16 +261,16 @@
                     <form class ="gender-filter">
                       <input type="checkbox" class="form-check-input female">
                         <label class="radio-inline mr3">
-                          <i class="fas fa-female"></i>
+                          <i class="fas fa-female" data-toggle="tooltip" data-placement="auto" title="female"></i>
                         </label>
                       <input type="checkbox" class="form-check-input male">
                        <label class="radio-inline">
-                         <i class="fas fa-male"></i>
+                         <i class="fas fa-male" data-toggle="tooltip" data-placement="auto" title="male"></i>
                       </label>
                    </form>
                    <div class="dropdown mt3">
                      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                       <i class="fas fa-plane"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
+                       <i class="fas fa-plane"  data-toggle="tooltip" data-placement="auto" title="How often do you travel by plane?"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
                        <span class="caret"></span></button>
                        <ul class="dropdown-menu">
                          <li><a>
@@ -289,7 +289,7 @@
                     </div>
                     <div class="dropdown mt3">
                       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        <i class="fas fa-birthday-cake"></i><span class="textDropdown">&nbsp; Age</span>
+                        <i class="fas fa-birthday-cake" data-toggle="tooltip" data-placement="auto" title="How old are you?"></i><span class="textDropdown">&nbsp; Age</span>
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                           <li><a>
@@ -306,7 +306,7 @@
                      </div>
                      <div class="dropdown mt3">
                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                         <i class="fas fa-dollar-sign"></i><span class="textDropdown">&nbsp; Income</span>
+                         <i class="fas fa-dollar-sign" data-toggle="tooltip" data-placement="auto" title="Yearly household income?"></i><span class="textDropdown">&nbsp; Income</span>
                          <span class="caret"></span></button>
                          <ul class="dropdown-menu">
                            <li><a>
@@ -324,7 +324,7 @@
                       </div>
                       <div class="dropdown mt3">
                         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                          <i class="fas fa-graduation-cap"></i><span class="textDropdown">&nbsp; Education</span>
+                          <i class="fas fa-graduation-cap" data-toggle="tooltip" data-placement="auto" title="Highest degree?"></i><span class="textDropdown">&nbsp; Education</span>
                           <span class="caret"></span></button>
                           <ul class="dropdown-menu">
                             <li><a>
@@ -341,7 +341,7 @@
                        </div>
                        <div class="dropdown mt3">
                          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                           <i class="fas fa-map-marker"></i><span class="textDropdown">&nbsp; Location</span>
+                           <i class="fas fa-map-marker" data-toggle="tooltip" data-placement="auto" title="Where are you from?"></i><span class="textDropdown">&nbsp; Location</span>
                            <span class="caret"></span></button>
                            <ul class="dropdown-menu">
                              <li><a>
@@ -363,7 +363,7 @@
                         </div>
                         <div class="dropdown mt3">
                           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                            <i class="fas fa-couch"></i><span class ="textDropdown">&nbsp; Frequency of seat reclining</span>
+                            <i class="fas fa-couch" data-toggle="tooltip" data-placement="auto" title="Do you ever recline your seat when you fly?"></i><span class ="textDropdown">&nbsp; Frequency of seat reclining</span>
                             <span class="caret"></span></button>
                             <ul class="dropdown-menu">
                               <li><a>
@@ -383,13 +383,13 @@
                           <form class ="child-filter mt3">
                             <input type="checkbox" class="form-check-input child" name="optradio">
                               <label class="radio-inline">
-                                <i class="fas fa-child"></i>
+                                <i class="fas fa-child" data-toggle="tooltip" data-placement="auto" title="Do you have any childer under 18?"></i>
                               <!--  <p id="baby-explanation">Does the participant have children?</p>-->
                               </label>
                          </form>
                          <div class="slidecontainer mt2">
                            <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
-                           <p class="current-value mt2">Height: </p>
+                           <p class="current-value mt2" data-toggle="tooltip" data-placement="auto" title="How tall are you?">Height: </p>
                          </div>
                       </div>
                     </div>
@@ -415,6 +415,11 @@
     <script src="resources/js/BubbleModel.js"></script>
     <script>
         BubbleDiagram.init();
+    </script>
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+      });
     </script>
 </body>
 </html>
