--- a/children.html
+++ b/children.html
@@ -88,12 +88,12 @@
         <div class = "col-sm-8 col-md-7 col-lg-7">
           <svg class = "ml6 mr6 bubbleDiagram" id = "babyBubbleChart"></svg>
         </div>
-        <div class = "col-lg-1">
+        <!--<div class = "col-lg-1">
           <div class="legendChart">
             <p>Legend</p>
             <svg class="legend" id = "legendID"></svg>
           </div>
-        </div>
+        </div>-->
         <div class="col-sm-8 col-md-4 col-lg-4">
           <div class="standardFilters">
             <div class ="card">
@@ -250,7 +250,7 @@
         </div>
         <div class="row mt3 ml2 mr2">
           <div class = "col-sm-8 col-md-7 col-lg-7">
-            <svg class = "ml6 mr6 bubbleDiagram"></svg>
+            <svg class = "ml6 mr6 bubbleDiagram" id = "babyUnrulyBubbleChart"></svg>
           </div>
           <div class = "col-lg-1">
           </div>
