--- a/seat.html
+++ b/seat.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="" content="Visualization of survey data about etiquette while flying">
     <title>Seat</title>
-	<script src="vendors/jquery/dist/jquery.min.js"></script>
+    <link rel="shortcut icon" href="resources/assets/favicon.png" type="image/png"/>
+    <link rel="icon" href="resources/assets/favicon.png" type="image/png"/>
+	  <script src="vendors/jquery/dist/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <!-- Optional theme -->
@@ -35,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Flying Etiquette</a>
+          <a class="navbar-brand" href="index.html"><img src="resources/assets/logo.svg" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
