--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
 
 	<main>
-        <div id="startDiagramBox" class="startDiagramBox">
+        <div id="startDiagramBox" class="startDiagramBox mt5">
             <svg class="startDiagram"></svg>
             <div class="infoBox">
                 <div class="outerInfo mb1">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="dotsInfo">
                     <span class="infoBoxText">Participant Answers:</span>
-                    <span class="dotsInfoText"></span>
+                    <div class="dotsInfoText"></div>
                 </div>
             </div>
         </div>
